--- a/src/assets/design-system/variables/components/navigation/_sidebar.scss
+++ b/src/assets/design-system/variables/components/navigation/_sidebar.scss
@@ -1,9 +1,9 @@
 // Sidebar
-$sidebar-bg: var(--brand-surface-color-medium);
+$sidebar-bg: var(--brand-surface-color-default-medium);
 $sidebar-height: 100%;
 $sidebar-width: $space-120 * 2;
 $sidebar-index: 1999;
-$sidebar-outline: var(--brand-outline);
+$sidebar-outline: var(--brand-focused);
 
 // Group
 $sidebar-group-icon-size: $space-16;
@@ -13,10 +13,10 @@ $sidebar-group-icon-border-radius: var(--brand-border-radius-xs);
 $sidebar-group-item-height: $space-32;
 $sidebar-group-item-icon-size: $space-20;
 $sidebar-group-item-border-radius: var(--brand-border-radius-sm);
-$sidebar-group-item-color: var(--brand-text-color-medium);
-$sidebar-group-item-bg: var(--brand-surface-color-medium);
+$sidebar-group-item-color: var(--brand-text-color-default-medium);
+$sidebar-group-item-bg: var(--brand-surface-color-default-medium);
 $sidebar-group-item-gap: $space-4;
 
 // hover
-$sidebar-group-item-color-hover: var(--brand-surface-color-medium);
-$sidebar-group-item-bg-hover: var(--brand-text-color-medium);
+$sidebar-group-item-color-hover: var(--brand-surface-color-default-medium);
+$sidebar-group-item-bg-hover: var(--brand-text-color-default-medium);
