--- a/src/assets/design-system/variables/components/data-display/_badge.scss
+++ b/src/assets/design-system/variables/components/data-display/_badge.scss
@@ -4,23 +4,23 @@ $badge-border-radius: $badge-height;
 
 $badge-variations: (
   'info': (
-    'color': var(--brand-text-color-info-high),
+    'color': var(--brand-text-color-info),
     'bg': var(--brand-surface-color-info),
   ),
   'warning': (
-    'color': var(--brand-text-color-warning-high),
+    'color': var(--brand-text-color-warning),
     'bg': var(--brand-surface-color-warning),
   ),
   'success': (
-    'color': var(--brand-text-color-success-high),
+    'color': var(--brand-text-color-success),
     'bg': var(--brand-surface-color-success),
   ),
   'danger': (
-    'color': var(--brand-text-color-danger-high),
+    'color': var(--brand-text-color-danger),
     'bg': var(--brand-surface-color-danger),
   ),
   'neutral': (
-    'color': var(--brand-text-color-medium),
-    'bg': var(--brand-surface-color-medium),
+    'color': var(--brand-text-color-default-medium),
+    'bg': var(--brand-surface-color-default-medium),
   ),
 );
