--- a/src/assets/design-system/variables/components/data-display/_tab-group.scss
+++ b/src/assets/design-system/variables/components/data-display/_tab-group.scss
@@ -4,17 +4,17 @@ $tab-icon-size: $space-20;
 $tab-icon-gap: $space-8;
 
 // default
-$tab-border: 1px solid var(--brand-border-color-medium);
-$tab-color: var(--brand-text-color-low);
+$tab-border: 1px solid var(--brand-border-color-default-medium);
+$tab-color: var(--brand-text-color-default-low);
 
 // default hover
-$tab-border-hover: 1px solid var(--brand-border-color-high);
-$tab-color-hover: var(--brand-text-color-medium);
+$tab-border-hover: 1px solid var(--brand-border-color-default-high);
+$tab-color-hover: var(--brand-text-color-default-medium);
 
 // active
-$tab-border-active: 2px solid var(--brand-interaction-color-primary-enabled);
-$tab-color-active: var(--brand-interaction-color-primary-enabled);
+$tab-border-active: 2px solid var(--brand-interaction-primary-enabled);
+$tab-color-active: var(--brand-interaction-primary-enabled);
 
 // active hover
-$tab-border-active-hover: 2px solid var(--brand-interaction-color-primary-hovered);
-$tab-color-active-hover: var(--brand-interaction-color-primary-hovered);
+$tab-border-active-hover: 2px solid var(--brand-interaction-primary-hovered);
+$tab-color-active-hover: var(--brand-interaction-primary-hovered);
