--- a/src/assets/design-system/variables/components/input-and-actions/_checkbox.scss
+++ b/src/assets/design-system/variables/components/input-and-actions/_checkbox.scss
@@ -1,21 +1,21 @@
 // Checkmark states
 // default
 $checkbox-checkmark-bg: transparent;
-$checkbox-checkmark-color: var(--brand-text-color-high-inverse);
-$checkbox-checkmark-border: 1px solid var(--brand-border-color-high);
+$checkbox-checkmark-color: var(--brand-text-color-inverse-high);
+$checkbox-checkmark-border: 1px solid var(--brand-border-color-default-high);
 
 // hover
 $checkbox-checkmark-bg-hover: transparent;
-$checkbox-checkmark-border-hover: 1px solid var(--brand-border-color-high);
+$checkbox-checkmark-border-hover: 1px solid var(--brand-border-color-default-high);
 
 // checked
-$checkbox-checkmark-bg-checked: var(--brand-interaction-color-primary-enabled);
-$checkbox-checkmark-border-checked: 1px solid var(--brand-interaction-color-primary-enabled);
+$checkbox-checkmark-bg-checked: var(--brand-interaction-primary-enabled);
+$checkbox-checkmark-border-checked: 1px solid var(--brand-interaction-primary-enabled);
 
 // Checkmark
 $checkbox-checkmark-size: $space-16;
 $checkbox-checkmark-border-radius: var(--brand-border-radius-sm);
-$checkbox-checkmark-outline: var(--brand-outline);
+$checkbox-checkmark-outline: var(--brand-focused);
 
 // Checkbox
 $checkbox-label-gap: $space-8;
