--- a/src/assets/design-system/variables/components/input-and-actions/_radio.scss
+++ b/src/assets/design-system/variables/components/input-and-actions/_radio.scss
@@ -1,21 +1,21 @@
 // Checkmark states
 // default
 $radio-checkmark-bg: transparent;
-$radio-checkmark-color: var(--brand-text-color-high-inverse);
-$radio-checkmark-border: 1px solid var(--brand-border-color-high);
+$radio-checkmark-color: var(--brand-text-color-inverse-high);
+$radio-checkmark-border: 1px solid var(--brand-border-color-default-high);
 
 //hover
 $radio-checkmark-bg-hover: transparent;
-$radio-checkmark-border-hover: 1px solid var(--brand-border-color-high);
+$radio-checkmark-border-hover: 1px solid var(--brand-border-color-default-high);
 
 // checked
-$radio-checkmark-bg-checked: var(--brand-interaction-color-primary-enabled);
-$radio-checkmark-border-checked: 1px solid var(--brand-interaction-color-primary-enabled);
+$radio-checkmark-bg-checked: var(--brand-interaction-primary-enabled);
+$radio-checkmark-border-checked: 1px solid var(--brand-interaction-primary-enabled);
 
 // Checkmark
 $radio-checkmark-size: $space-16;
 $radio-checkmark-border-radius: 50%;
-$radio-checkmark-outline: var(--brand-outline);
+$radio-checkmark-outline: var(--brand-focused);
 
 // Checkbox
 $radio-label-gap: $space-8;
