--- a/src/assets/design-system/variables/components/navigation/_breadcrumb.scss
+++ b/src/assets/design-system/variables/components/navigation/_breadcrumb.scss
@@ -11,7 +11,7 @@ $breadcrumb-item-height: $space-24;
 $breadcrumb-item-text-decoration: none;
 $breadcrumb-item-border: none;
 $breadcrumb-item-border-radius: var(--brand-border-radius-sm);
-$breadcrumb-item-outline: var(--brand-outline);
+$breadcrumb-item-outline: var(--brand-focused);
 
 // hover
 $breadcrumb-item-bg-hover: var(--brand-secondary-bg-color);
