--- a/src/assets/design-system/variables/components/navigation/_pagination.scss
+++ b/src/assets/design-system/variables/components/navigation/_pagination.scss
@@ -1,9 +1,9 @@
-$pagination-border: 1px solid var(--brand-border-color-high);
+$pagination-border: 1px solid var(--brand-border-color-default-high);
 $pagination-padding-top: $space-8;
 
 // buttons
 $pagination-button-size: $space-48;
-$pagination-button-border: 1px solid var(--brand-border-color-medium);
+$pagination-button-border: 1px solid var(--brand-border-color-default-medium);
 $pagination-button-border-radius: 50%;
 $pagination-button-shadow: var(--brand-elevation-1);
 $pagination-button-disabled-opacity: 0.3;
@@ -12,30 +12,30 @@ $pagination-button-pages-gap: $space-24;
 $pagination-button-slim-gap: $space-8;
 
 // default
-$pagination-button-bg: var(--brand-interaction-color-neutral-enabled);
-$pagination-button-color: var(--brand-text-color-medium);
+$pagination-button-bg: var(--brand-interaction-neutral-enabled);
+$pagination-button-color: var(--brand-text-color-default-medium);
 
 // focus
-$pagination-button-outline: var(--brand-outline);
-$pagination-button-bg-focus: var(--brand-interaction-color-neutral-enabled);
-$pagination-button-color-focus: var(--brand-text-color-medium);
+$pagination-button-outline: var(--brand-focused);
+$pagination-button-bg-focus: var(--brand-interaction-neutral-enabled);
+$pagination-button-color-focus: var(--brand-text-color-default-medium);
 
 //hover
-$pagination-button-bg-hover: var(--brand-interaction-color-neutral-enabled);
-$pagination-button-color-hover: var(--brand-text-color-medium);
+$pagination-button-bg-hover: var(--brand-interaction-neutral-enabled);
+$pagination-button-color-hover: var(--brand-text-color-default-medium);
 
 //active
-$pagination-button-bg-active: var(--brand-interaction-color-neutral-enabled);
-$pagination-button-color-active: var(--brand-text-color-medium);
+$pagination-button-bg-active: var(--brand-interaction-neutral-enabled);
+$pagination-button-color-active: var(--brand-text-color-default-medium);
 
 // page item
 $pagination-item-padding: $space-24 $space-16 $space-16 $space-16;
 $pagination-item-min-width: $space-64;
 
 // default
-$pagination-item-color: var(--brand-text-color-low);
+$pagination-item-color: var(--brand-text-color-default-low);
 $pagination-item-bg: transparent;
-$pagination-item-border: 1px solid var(--brand-border-color-high);
+$pagination-item-border: 1px solid var(--brand-border-color-default-high);
 
 // active
 $pagination-item-color-active: var(--brand-primary);
@@ -43,12 +43,12 @@ $pagination-item-bg-active: transparent;
 $pagination-item-border-active: 2px solid var(--brand-primary);
 
 // focus
-$pagination-item-outline: var(--brand-outline);
-$pagination-item-color-focus: var(--brand-text-color-low);
+$pagination-item-outline: var(--brand-focused);
+$pagination-item-color-focus: var(--brand-text-color-default-low);
 $pagination-item-bg-focus: transparent;
-$pagination-item-border-focus: 1px solid var(--brand-border-color-high);
+$pagination-item-border-focus: 1px solid var(--brand-border-color-default-high);
 
 // hover
-$pagination-item-color-hover: var(--brand-text-color-medium);
-$pagination-item-bg-hover: var(--brand-interaction-color-neutral-hovered);
-$pagination-item-border-hover: 1px solid var(--brand-border-color-high);
+$pagination-item-color-hover: var(--brand-text-color-default-medium);
+$pagination-item-bg-hover: var(--brand-interaction-neutral-hovered);
+$pagination-item-border-hover: 1px solid var(--brand-border-color-default-high);
